# mgbench

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TESTS.md  build.sh  run.sh
src/L0/: devinfo.cpp  numgpus.cpp
src/L1/: fullduplex.cpp  halfduplex.cpp  scatter.cpp  uva.cu
src/L2/gol/: golsample.cu  main.cpp
src/L2/sgemm/: main.cpp  sgemm.cu
travis/: install.sh
